Perkin-UAT/force-app/main/default/objects/BD_Local_Entity__c/BD_Local_Entity__c.object-meta.xml
<CustomObject>
    <description>Object to store data for PerkinElmer entities globally. Used to populate CPQ quote templates with the proper address &amp; contact information.</description>
    <label>Local Entity</label>
    <nameField>
        <displayFormat>LE-{0000}</displayFormat>
        <label>Local Entity Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Local Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>