Perkin-UAT/force-app/main/default/objects/BD_Local_Entity__c/fields/Aftermarket_Fax__c.field-meta.xml
<CustomField>
    <fullName>Aftermarket_Fax__c</fullName>
    <description>Created by PwC as part of SC-630</description>
    <label>Aftermarket Fax</label>
    <type>TextArea</type>
</CustomField>