Perkin-UAT/force-app/main/default/objects/BD_Local_Entity__c/fields/BD_Fax__c.field-meta.xml
<CustomField>
    <fullName>BD_Fax__c</fullName>
    <label>Fax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>