Perkin-UAT/force-app/main/default/objects/BD_Local_Entity__c/fields/BD_Local_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>BD_Local_Entity_Name__c</fullName>
    <description>Name of the corporate entity in the locale</description>
    <label>Local Entity Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>