Perkin-UAT/force-app/main/default/objects/BD_Local_Entity__c/fields/BD_Phone__c.field-meta.xml
<CustomField>
    <fullName>BD_Phone__c</fullName>
    <label>Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>