Perkin-UAT/force-app/main/default/objects/BD_Local_Entity__c/fields/Email_Address_for_POs_Service_Sales__c.field-meta.xml
<CustomField>
    <fullName>Email_Address_for_POs_Service_Sales__c</fullName>
    <description>Created by PwC as part of SC-570</description>
    <label>Email Address for POs (Service Sales)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>