Perkin-UAT/force-app/main/default/objects/BD_Local_Entity__c/fields/Purchase_Order_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order_Guidelines__c</fullName>
    <description>Created by PwC as part of SC-570</description>
    <label>Purchase Order Guidelines</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>