Perkin-UAT/force-app/main/default/objects/BD_Local_Entity__c/fields/Service_Sales_Fax__c.field-meta.xml
<CustomField>
    <fullName>Service_Sales_Fax__c</fullName>
    <description>Created by PwC as part of SC-630</description>
    <label>Service Sales Fax</label>
    <type>TextArea</type>
</CustomField>