Perkin-UAT/force-app/main/default/objects/BD_Local_Entity__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Created by PWC as part of SC-511</description>
    <label>Website</label>
    <length>255</length>
    <type>Text</type>
</CustomField>