Perkin-UAT/force-app/main/default/objects/BD_Local_Entity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BD_Local_Entity_Name__c</columns>
    <columns>BD_Sales_Org__c</columns>
    <columns>Price_List_Type__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>BD_Address__c</columns>
    <columns>BD_Email_Address_for_POs__c</columns>
    <columns>Email_Address_for_POs_Aftermarket__c</columns>
    <columns>Email_Address_for_POs_Service_Sales__c</columns>
    <columns>BD_Phone__c</columns>
    <columns>Service_Sales_Phone__c</columns>
    <columns>Aftermarket_Phone__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>